feature/ITBMSPR-00003 Test Rollback Scenario

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -91,6 +91,12 @@ jobs:
             echo Using ENV_FILE=%ENV_FILE%
             docker-compose -f docker-compose.yml --env-file %ENV_FILE% -p dev up --build -d
         shell: cmd 
+        
+      - name: Capture Logs on Failure
+        if: failure()
+        run: |
+            docker logs dev_sqlserver > dev_sqlserver_logs.txt
+            type dev_sqlserver_logs.txt
 
   cd_qa:
     name: Deploy to QA with Approval
