feature/ITBMSPR-00003 committed changes

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -105,7 +105,7 @@ jobs:
   cd_qa:
     name: Deploy to QA with Approval
     runs-on: self-hosted
-    if: github.ref == 'refs/heads/develop'  # Still ensures it runs only on 'develop'.
+    if: github.ref == 'refs/heads/develop'  # Still ensures it runs only on 'develop'..
     environment: qa
     steps:
     
