--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -77,7 +77,7 @@ jobs:
         run: |
             docker ps
             docker info
-        shell: cmd # fixed runner let's see...
+        shell: cmd # fixed runner let's see......
       
       - name: Debug .env.dev File
         run: |
